@@ -38,11 +38,13 @@
 <p>2015-03-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/ps.c (ReadPSImage): Ghostscript options concatenation
+should be more secure against buffer overflow.</li>
 <li>coders/pdf.c (ReadPDFImage): Applied patch by Chris Gilling such
 that '-define pdf:stop-on-error=true' will stop PDF processing
 immediately upon an error.
-(ReadPDFImage): PDF options concatenation should be more secure
-against buffer overflow.</li>
+(ReadPDFImage): Ghostscript options concatenation should be more
+secure against buffer overflow.</li>
 </ul>
 </blockquote>
 <p>2015-03-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
